[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scenes/game/homebase_scene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/game/map_manager.gd" type="Script" id=2]
[ext_resource path="res://Tileset/tileset_00.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/game/tilemap_controller.gd" type="Script" id=4]
[ext_resource path="res://Scenes/mini_scenes/actors/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/mini_scenes/actors/enemy.tscn" type="PackedScene" id=6]

[node name="homebase_scene" type="Node"]

script/script = ExtResource( 1 )

[node name="map_manager" type="Node2D" parent="."]

script/script = ExtResource( 2 )

[node name="tilemap" type="TileMap" parent="map_manager"]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 327683, 0, 327684, 13, 327685, 13, 327686, 13, 327687, 1, 327688, 13, 327689, 13, 327690, 13, 327691, 13, 327692, 13, 327693, 13, 327694, 13, 327695, 1, 327696, 13, 327697, 13, 327698, 13, 327699, 2, 393219, 15, 393220, 21, 393221, 21, 393222, 21, 393223, 15, 393224, 21, 393225, 21, 393226, 21, 393227, 21, 393228, 21, 393229, 21, 393230, 21, 393231, 15, 393232, 21, 393233, 21, 393234, 21, 393235, 15, 458755, 15, 458756, 21, 458757, 21, 458758, 21, 458759, 15, 458760, 21, 458761, 21, 458762, 21, 458763, 22, 458764, 21, 458765, 21, 458766, 21, 458767, 15, 458768, 21, 458769, 21, 458770, 21, 458771, 15, 524291, 4, 524292, 13, 524293, 17, 524294, 13, 524295, 36, 524296, 21, 524297, 21, 524298, 21, 524299, 21, 524300, 21, 524301, 21, 524302, 21, 524303, 4, 524304, 13, 524305, 17, 524306, 13, 524307, 6, 589827, 15, 589828, 21, 589829, 21, 589830, 21, 589831, 21, 589832, 21, 589833, 21, 589834, 21, 589835, 21, 589836, 21, 589837, 21, 589838, 21, 589839, 21, 589840, 21, 589841, 21, 589842, 21, 589843, 15, 655363, 15, 655364, 21, 655365, 21, 655366, 21, 655367, 21, 655368, 21, 655369, 21, 655370, 21, 655371, 21, 655372, 21, 655373, 21, 655374, 21, 655375, 21, 655376, 21, 655377, 21, 655378, 21, 655379, 15, 720899, 15, 720900, 21, 720901, 21, 720902, 21, 720903, 25, 720904, 21, 720905, 21, 720906, 21, 720907, 21, 720908, 21, 720909, 21, 720910, 21, 720911, 25, 720912, 21, 720913, 21, 720914, 21, 720915, 15, 786435, 15, 786436, 21, 786437, 21, 786438, 21, 786439, 4, 786440, 13, 786441, 13, 786442, 13, 786443, 13, 786444, 13, 786445, 13, 786446, 13, 786447, 6, 786448, 21, 786449, 21, 786450, 21, 786451, 15, 851971, 15, 851972, 21, 851973, 21, 851974, 21, 851975, 15, 851976, 21, 851977, 21, 851978, 21, 851979, 21, 851980, 21, 851981, 21, 851982, 21, 851983, 15, 851984, 21, 851985, 21, 851986, 21, 851987, 15, 917507, 7, 917508, 2, 917509, 21, 917510, 21, 917511, 15, 917512, 21, 917513, 21, 917514, 21, 917515, 21, 917516, 21, 917517, 21, 917518, 21, 917519, 15, 917520, 21, 917521, 21, 917522, 0, 917523, 9, 983044, 15, 983045, 21, 983046, 21, 983047, 15, 983048, 21, 983049, 21, 983050, 21, 983051, 21, 983052, 21, 983053, 21, 983054, 21, 983055, 15, 983056, 21, 983057, 21, 983058, 15, 1048580, 15, 1048581, 21, 1048582, 21, 1048583, 15, 1048584, 21, 1048585, 21, 1048586, 21, 1048587, 21, 1048588, 21, 1048589, 21, 1048590, 21, 1048591, 15, 1048592, 21, 1048593, 21, 1048594, 15, 1114116, 15, 1114117, 21, 1114118, 21, 1114119, 15, 1114120, 21, 1114121, 21, 1114122, 21, 1114123, 21, 1114124, 21, 1114125, 21, 1114126, 21, 1114127, 15, 1114128, 21, 1114129, 21, 1114130, 15, 1179651, 0, 1179652, 9, 1179653, 21, 1179654, 21, 1179655, 7, 1179656, 13, 1179657, 13, 1179658, 17, 1179659, 17, 1179660, 17, 1179661, 13, 1179662, 13, 1179663, 9, 1179664, 21, 1179665, 21, 1179666, 15, 1245187, 15, 1245188, 21, 1245189, 21, 1245190, 21, 1245191, 21, 1245192, 21, 1245193, 21, 1245194, 21, 1245195, 21, 1245196, 21, 1245197, 21, 1245198, 21, 1245199, 21, 1245200, 21, 1245201, 21, 1245202, 15, 1310723, 15, 1310724, 21, 1310725, 21, 1310726, 21, 1310727, 21, 1310728, 21, 1310729, 21, 1310730, 21, 1310731, 21, 1310732, 21, 1310733, 21, 1310734, 21, 1310735, 21, 1310736, 21, 1310737, 21, 1310738, 15, 1376259, 7, 1376260, 13, 1376261, 13, 1376262, 13, 1376263, 13, 1376264, 2, 1376265, 21, 1376266, 21, 1376267, 21, 1376268, 21, 1376269, 21, 1376270, 0, 1376271, 13, 1376272, 13, 1376273, 13, 1376274, 9, 1441800, 7, 1441801, 13, 1441802, 13, 1441803, 13, 1441804, 13, 1441805, 13, 1441806, 9 )
script/script = ExtResource( 4 )

[node name="shadows_layer" type="TileMap" parent="map_manager/tilemap"]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="objects" type="Node2D" parent="map_manager/tilemap"]

[node name="actors" type="Node2D" parent="map_manager/tilemap"]

[node name="player" parent="map_manager/tilemap/actors" groups=[ "player" ] instance=ExtResource( 5 )]

transform/pos = Vector2( 80, 176 )

[node name="enemy" parent="map_manager/tilemap/actors" instance=ExtResource( 6 )]

transform/pos = Vector2( 160, 176 )

[node name="enemy1" parent="map_manager/tilemap/actors" instance=ExtResource( 6 )]

transform/pos = Vector2( 272, 208 )

[node name="explored_layer" type="TileMap" parent="map_manager/tilemap"]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="gui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )


